# soccer_player

./: README.md  pyproject.toml
src/soccer_player/: .forward.py.swo  forward.py
