[project]
name = "soccer_player"
version = "0.1.0"
description = "demonstrates players' records"
authors = [
    {name = "junsungs950", email = "junsungs950@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
